--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section class="page__js js">
 				<div class="js__container">
 					<h2 class="js__title">
-						1. Операторы JAVASCRIPT. "2"+2=22. Уроки JAVASCRIPT с нуля 2020
+						1. Операторы JAVASCRIPT. "2"+2=22.
 					</h2>
 					<div class="js__media">
 						<img src="img/js_1.jpg" alt="">
